# cmake-lib-example

./: .gitignore  CMakeLists.txt  README
src/: main.cc
