cmake_minimum_required(VERSION 3.13)
project(helloworld VERSION 1.0)
add_subdirectory(deps/simple)
add_executable(${PROJECT_NAME} src/main.cc)
target_link_libraries(${PROJECT_NAME} simple)
target_include_directories(${PROJECT_NAME} PRIVATE deps/simple)
target_link_directories(${PROJECT_NAME} PUBLIC deps/simple)